Able to play all kinds of music, fixed album covers

--- a/src/player/Player.css
+++ b/src/player/Player.css
@@ -56,3 +56,20 @@
     width: 40%;
     margin: 10px;
 }
+
+.playButton {
+    position: absolute;
+    top: 40vh;
+    right: 48vw;
+    z-index: 100;
+}
+
+.playButton button, input[type="submit"], input[type="reset"] {
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
